Fix contrast problems

--- a/css/style.scss
+++ b/css/style.scss
@@ -924,7 +924,7 @@ video {
 }
 
 .participantWithList .participant-moderator-indicator {
-	opacity: .5;
+	color: var(--color-text-maxcontrast);
 	font-weight: 300;
 	padding-left: 5px;
 }
@@ -932,13 +932,13 @@ video {
 .participantWithList .icon {
 	width: 16px;
 	display: inline-block;
-	opacity: 0.4;
+	opacity: .4;
 	margin-left: 5px;
 	margin-bottom: -4px;
 }
 
 .participantWithList .participant-offline > a {
-	opacity: .5;
+	color: var(--color-text-maxcontrast);
 }
 
 .participantWithList li {
